--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,21 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 24.1.0
-    hooks:
-      - id: black
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.1
-    hooks:
-      - id: mypy
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-  - repo: https://github.com/kynan/nbstripout
-    rev: v0.5.0
+      - id: check-yaml
+      - id: check-merge-conflict
+
+  - repo: https://github.com/psf/black
+    rev: 24.10.0
     hooks:
-      - id: nbstripout
+      - id: black
+
+  - repo: local
+    hooks:
+      - id: verify-repo-structure
+        name: verify-repo-structure
+        entry: python scripts/verify_repo_structure.py
+        language: system
+        pass_filenames: false
