--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,5 +1,25 @@
 stages:
   download_data:
-    cmd: python scripts/download_data.py
+    cmd: python scripts/download_data.py --output data/raw/evasionbench.parquet --revision main
+    deps:
+      - scripts/download_data.py
+      - src/data.py
     outs:
       - data/raw/evasionbench.parquet
+
+  validate_data:
+    cmd: python scripts/validate_dataset.py --data data/raw/evasionbench.parquet --contract data/contracts/evasionbench_manifest.json
+    deps:
+      - scripts/validate_dataset.py
+      - src/data.py
+      - data/raw/evasionbench.parquet
+      - data/contracts/evasionbench_manifest.json
+
+  prepare_data:
+    cmd: python scripts/prepare_data.py --input data/raw/evasionbench.parquet --output data/processed/evasionbench_prepared.parquet
+    deps:
+      - scripts/prepare_data.py
+      - data/raw/evasionbench.parquet
+      - data/contracts/evasionbench_manifest.json
+    outs:
+      - data/processed/evasionbench_prepared.parquet
