--- a/dvc.yaml
+++ b/dvc.yaml
@@ -215,3 +215,20 @@ stages:
       - artifacts/diagnostics/phase6/outlier_examples.csv
       - artifacts/diagnostics/phase6/label_diagnostics_summary.json
       - artifacts/diagnostics/phase6/label_diagnostics_report.md
+
+  phase7_report_pipeline:
+    cmd: python3 scripts/run_research_pipeline.py --input data/processed/evasionbench_prepared.parquet --output-root artifacts/reports/phase7 --skip-existing
+    deps:
+      - scripts/run_research_pipeline.py
+      - scripts/build_report_manifest.py
+      - scripts/run_phase3_analyses.py
+      - scripts/run_phase4_analyses.py
+      - scripts/run_classical_baselines.py
+      - scripts/run_transformer_baselines.py
+      - scripts/run_explainability_analysis.py
+      - scripts/run_transformer_explainability.py
+      - scripts/run_label_diagnostics.py
+      - data/processed/evasionbench_prepared.parquet
+    outs:
+      - artifacts/reports/phase7/provenance_manifest.json
+      - artifacts/reports/phase7/run_summary.json
