Implement 10-point portfolio improvement plan
- Rewrite README with badges, architecture diagram, results table, project structure
- Add GitHub Actions CI workflow (.github/workflows/ci.yml)
- Pin dependency versions in requirements.txt, create requirements.lock
- Complete Docker setup: multi-stage Dockerfile, docker-compose.yml, Makefile targets
- Add ruff linter + mypy config to pyproject.toml and pre-commit hooks
- Add test coverage reporting (pytest-cov) to Makefile and CI
- Create docs/architecture.md and docs/research_summary.md
- Create dashboard/requirements.txt for Streamlit Cloud deployment
- Fix pyproject.toml author placeholder
- Apply ruff auto-fixes (import sorting, modern type annotations) across codebase
- Fix pre-existing ruff lint issues (unused variables, exception chaining)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,20 @@
 name = "evasionbench"
 version = "0.1.0"
 description = "EvasionBench data science portfolio"
-authors = ["Your Name <you@example.com>"]
+authors = ["Dustin Ober"]
 
 [tool.black]
 line-length = 88
+
+[tool.ruff]
+line-length = 88
+exclude = ["notebooks/"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B"]
+ignore = ["E402", "E501", "B905"]
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+ignore_missing_imports = true
