--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,40 @@
-datasets
-transformers
-torch
-sentence-transformers
-scikit-learn
-xgboost
-pandas
-numpy
-pyarrow
-matplotlib
-seaborn
-plotly
-spacy
-nltk
-textstat
-shap
-lime
-captum
-mlflow
-dvc
-fastapi
-uvicorn
-streamlit
-pytest
-black
-nbstripout
-pydantic
-sentencepiece
-cleanlab
-huggingface_hub
-rich
-pyyaml
-jinja2
-markdown
-weasyprint
+datasets>=4.5,<5
+transformers>=4.57,<5
+torch>=2.8,<3
+sentence-transformers>=5.1,<6
+scikit-learn>=1.6,<2
+xgboost>=2.1,<3
+pandas>=1.5,<2
+numpy>=1.26,<2
+pyarrow>=21.0,<22
+matplotlib>=3.9,<4
+seaborn>=0.13,<1
+plotly>=6.5,<7
+spacy>=3.8,<4
+nltk>=3.9,<4
+textstat>=0.7,<1
+shap>=0.49,<1
+lime>=0.2,<1
+captum>=0.8,<1
+mlflow>=1.30,<2
+dvc>=3.66,<4
+fastapi>=0.128,<1
+uvicorn>=0.39,<1
+streamlit>=1.50,<2
+pytest>=8.4,<9
+black>=22.12,<23
+nbstripout>=0.8,<1
+pydantic>=2.12,<3
+sentencepiece>=0.2,<1
+cleanlab>=2.7,<3
+huggingface_hub>=0.36,<1
+rich>=14.3,<15
+pyyaml>=6.0,<7
+jinja2>=3.1,<4
+markdown>=3.9,<4
+weasyprint>=66.0,<67
+ruff>=0.15,<1
+mypy>=1.19,<2
+pytest-cov>=7.0,<8
 
 setuptools<81
