Add GitHub Pages publication pipeline and associated tests
- Implemented `run_pages_pipeline.py` to orchestrate the publication process for GitHub Pages, including building datasets and rendering static site files.
- Created `test_pages_dataset_contract.py` to validate outputs and ensure paths are sanitized in the dataset building process.
- Added `test_pages_render_outputs.py` to verify that the rendered site includes all required HTML pages and assets.
- Introduced `test_pages_size_budget.py` to enforce size constraints on individual files during dataset creation.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ artifacts/models/phase6/transformer/model/*.pt
 
 # Temporary training outputs
 tmp_transformer_output/
+artifacts/publish/
 
 # Notebook checkpoints
 .ipynb_checkpoints
