--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,9 @@ jobs:
 
       - uses: actions/configure-pages@v5
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
       - name: Build publish dataset and static site
         run: |
           python scripts/run_pages_pipeline.py \
